--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -552,6 +552,8 @@
     <Compile Include="ViewModels\CL\CL_GCCView.cs" />
     <Compile Include="ViewModels\CL\CL_ZCView.cs" />
     <Compile Include="ViewModels\CL\CL_JXView.cs" />
+    <Compile Include="ViewModels\CL\CL_QCWXBYView.cs" />
+    <Compile Include="ViewModels\CL\CL_GHSPNJYCView.cs" />
     <Compile Include="ViewModels\CL\CL_ZXCView.cs" />
     <Compile Include="ViewModels\CL\CL_DDCView.cs" />
     <Compile Include="ViewModels\CL\CL_SLCView.cs" />
