--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -555,6 +555,7 @@
     <Compile Include="ViewModels\CL\CL_QCWXBYView.cs" />
     <Compile Include="ViewModels\CL\CL_GHSPNJYCView.cs" />
     <Compile Include="ViewModels\CL\CL_QCMRZSView.cs" />
+    <Compile Include="ViewModels\CL\CL_QCGZFHView.cs" />
     <Compile Include="ViewModels\CL\CL_ZXCView.cs" />
     <Compile Include="ViewModels\CL\CL_DDCView.cs" />
     <Compile Include="ViewModels\CL\CL_SLCView.cs" />
