--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -560,6 +560,7 @@
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CW.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWYPSP.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWFW.css" />
+    <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWGY.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_HNYC.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWM.css" />
     <Content Include="Areas\Business\Css\XXXX\CW\CWXX_CWG.css" />
