--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -590,6 +590,7 @@
     <Compile Include="ViewModels\QZZP\QZZP_JZZPView.cs" />
     <Compile Include="ViewModels\QZZP\QZZP_QZZPView.cs" />
     <Compile Include="ViewModels\SHFW\SHFW_BJView.cs" />
+    <Compile Include="ViewModels\SWFW\SWFW_GSZCView.cs" />
     <Compile Include="ViewModels\XXYL\XXYL_YDJSView.cs" />
     <Compile Include="ViewModels\ZXJC\ZXJC_JZFWView.cs" />
   </ItemGroup>
