--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -260,7 +260,7 @@
     <Compile Include="Maps\SZMX_Map.cs" />
     <Compile Include="Maps\BZZX\BZZX_WZJY_Map.cs" />
     <Compile Include="Maps\CODES\XQJBXX\XQJBXX_Map.cs" />
-    <Compile Include="Maps\XXLB_Map.cs" />
+    <Compile Include="Maps\CODES\CODES_XXLB_Map.cs" />
     <Compile Include="Maps\XXYL\XXYL_DIYSGFJBXX_Map.cs" />
     <Compile Include="Maps\XXYL\XXYL_HPGJBXX_Map.cs" />
     <Compile Include="Maps\XXYL\XXYL_HWJBXX_Map.cs" />
@@ -508,7 +508,7 @@
     <Compile Include="Models\SZMX.cs" />
     <Compile Include="Models\BZZX\WZYJ.cs" />
     <Compile Include="Models\CODES\XQJBXX\XQJBXX.cs" />
-    <Compile Include="Models\XXLB.cs" />
+    <Compile Include="Models\CODES\CODES_XXLB.cs" />
     <Compile Include="Models\XXYL\XXYL_DIYSGFJBXX.cs" />
     <Compile Include="Models\XXYL\XXYL_HPGJBXX.cs" />
     <Compile Include="Models\XXYL\XXYL_HWJBXX.cs" />
