--- a/网络爬虫_获取小区信息/WLPC/WLPC.csproj
+++ b/网络爬虫_获取小区信息/WLPC/WLPC.csproj
@@ -68,8 +68,9 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Ashx\GetXQXX.ashx" />
+    <Content Include="Ashx\GetXQJBXX.ashx" />
     <Content Include="packages.config" />
+    <Content Include="Ashx\GetXQXXXX.ashx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -83,8 +84,11 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ashx\GetXQXX.ashx.cs">
-      <DependentUpon>GetXQXX.ashx</DependentUpon>
+    <Compile Include="Ashx\GetXQXXXX.ashx.cs">
+      <DependentUpon>GetXQXXXX.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="Ashx\GetXQJBXX.ashx.cs">
+      <DependentUpon>GetXQJBXX.ashx</DependentUpon>
     </Compile>
     <Compile Include="Index.aspx.cs">
       <DependentUpon>Index.aspx</DependentUpon>
