--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -161,6 +161,7 @@
     <Content Include="Areas\Business\Css\BZZX\BZZX_SY_ZHMM.css" />
     <Content Include="Areas\Business\Css\BZZX\BZZX_WZJY.css" />
     <Content Include="Areas\Business\Css\Common\Head.css" />
+    <Content Include="Areas\Business\Css\Common\CXLB_Common.css" />
     <Content Include="Areas\Business\Css\CXLB\SHFWCX.css" />
     <Content Include="Areas\Business\Css\CXLB\XXYLCX.css" />
     <Content Include="Areas\Business\Css\CXLB\LYJDCX.css" />
@@ -221,7 +222,25 @@
     <Content Include="Areas\Business\Css\HTFB\FC\FC_HZF.css" />
     <Content Include="Areas\Business\Css\HTFB\SHFW\SHFW_SMWX.css" />
     <Content Include="Areas\Business\Css\images\CXLB\cxlb_px_down_gray.png" />
+    <Content Include="Areas\Business\Css\images\CXLB\cxlb_px_down_orange.png" />
     <Content Include="Areas\Business\Css\images\CXLB\cxlb_px_up_gray.png" />
+    <Content Include="Areas\Business\Css\images\CXLB\cxlb_px_up_orange.png" />
+    <Content Include="Areas\Business\Css\images\lxdh.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_冰箱.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_宽带.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_床.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_暖气.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_沙发.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_洗衣机.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_热水器.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_独立卫生间.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_电视.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_空调.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_衣柜.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_阳台.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\GY\xxxx_gy_sfz.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\GY\xxxx_gy_yyzz.png" />
+    <Content Include="Areas\Business\Css\images\XXXX\GY\xxxx_gy_zmxy.png" />
     <Content Include="Areas\Business\Css\Other\FBCG.css" />
     <Content Include="Areas\Business\Css\HTFB\FC\FC_CF.css" />
     <Content Include="Areas\Business\Css\HTFB\FC\FC_DZF.css" />
@@ -333,29 +352,29 @@
     <Content Include="Areas\Business\Css\images\system_photo2.jpg" />
     <Content Include="Areas\Business\Css\images\system_photo3.jpg" />
     <Content Include="Areas\Business\Css\images\system_photo4.jpg" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_bjgl.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_cjrj.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_cszs.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_cyzs.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_czlcx.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_fcjy.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_gmgl.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_gzjsq.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_hqgl.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_jhlz.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_jjz.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_jsz.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_sbyl.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_sfhj.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_shqm.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_syqz.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_wzcx.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_xcaq.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_xsz.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_ycbk.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_yygh.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_zxjsq.png" />
-    <Content Include="Areas\Business\Css\images\sy\bmfw\sy_bmfw_zxzs.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_bjgl.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_cjrj.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_cszs.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_cyzs.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_czlcx.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_fcjy.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_gmgl.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_gzjsq.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_hqgl.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_jhlz.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_jjz.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_jsz.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_sbyl.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_sfhj.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_shqm.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_syqz.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_wzcx.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_xcaq.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_xsz.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_ycbk.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_yygh.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_zxjsq.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_zxzs.png" />
     <Content Include="Areas\Business\Css\images\three-blue.png" />
     <Content Include="Areas\Business\Css\images\three-gray.png" />
     <Content Include="Areas\Business\Css\images\two-blue.png" />
