--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -226,6 +226,38 @@
     <Content Include="Areas\Business\Css\images\CXLB\cxlb_px_up_gray.png" />
     <Content Include="Areas\Business\Css\images\CXLB\cxlb_px_up_orange.png" />
     <Content Include="Areas\Business\Css\images\lxdh.png" />
+    <Content Include="Areas\Business\Css\images\SY\BMFW\sy_bmfw_kdcx.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_cl2.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_cl3.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_cl4.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_cw.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_cw2.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_cw3.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_es2.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_es3.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_essc.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_fc.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_fc2.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_jypx.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_jypx2.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_jypx3.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_pfcg.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_pfcg2.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_shfw.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_shfw2.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_shfw3.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_swfw.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_swfw2.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_swfw3.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_zp.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_zp2.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_zsjm2.png" />
+    <Content Include="Areas\Business\Css\images\SY\TBDH\body_top_zsjm3.png" />
+    <Content Include="Areas\Business\Css\images\SY\WZJB\QQ图片20171101223257.png" />
+    <Content Include="Areas\Business\Css\images\SY\WZJB\QQ图片20171101223339.png" />
+    <Content Include="Areas\Business\Css\images\SY\WZJB\QQ图片20171101223342.png" />
+    <Content Include="Areas\Business\Css\images\SY\WZJB\QQ图片20171101223345.png" />
+    <Content Include="Areas\Business\Css\images\SY\WZJB\QQ图片20171101223348.png" />
     <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_冰箱.png" />
     <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_宽带.png" />
     <Content Include="Areas\Business\Css\images\XXXX\FC\xxxx_fc_床.png" />
@@ -266,14 +298,6 @@
     <Content Include="Areas\Business\Css\images\arrow_up.png" />
     <Content Include="Areas\Business\Css\images\bddt_search.png" />
     <Content Include="Areas\Business\Css\images\bddt_search_hover.png" />
-    <Content Include="Areas\Business\Css\images\body_top_cw.png" />
-    <Content Include="Areas\Business\Css\images\body_top_esc.png" />
-    <Content Include="Areas\Business\Css\images\body_top_essc.png" />
-    <Content Include="Areas\Business\Css\images\body_top_fc.png" />
-    <Content Include="Areas\Business\Css\images\body_top_jypx.png" />
-    <Content Include="Areas\Business\Css\images\body_top_shfw.png" />
-    <Content Include="Areas\Business\Css\images\body_top_swfw.png" />
-    <Content Include="Areas\Business\Css\images\body_top_zp.png" />
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_fhdb_hz.png" />
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_lxkf_mygrxx.png" />
     <Content Include="Areas\Business\Css\images\BZZX\bzzx_sy_dhmycx_cx.png" />
