--- a/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
+++ b/TianWen.XiaoZhen1Qu.Web/TianWen.XiaoZhen1Qu.Web.csproj
@@ -351,7 +351,7 @@
     <Content Include="Areas\Business\Css\images\expand.png" />
     <Content Include="Areas\Business\Css\images\expand_blue.png" />
     <Content Include="Areas\Business\Css\images\grsfrz.png" />
-    <Content Include="Areas\Business\Css\images\head_nav_down.png" />
+    <Content Include="Areas\Business\Css\images\head_nav_down1.png" />
     <Content Include="Areas\Business\Css\images\head_nav_up.png" />
     <Content Include="Areas\Business\Css\images\icon.png" />
     <Content Include="Areas\Business\Css\images\logo.png" />
