--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -584,7 +584,10 @@
     <Compile Include="ViewModels\FC\FC_SPView.cs" />
     <Compile Include="ViewModels\FC\FC_ZZFView.cs" />
     <Compile Include="ViewModels\GY\GRXXView.cs" />
+    <Compile Include="ViewModels\HQSY\HQSY_HLGPView.cs" />
+    <Compile Include="ViewModels\HQSY\HQSY_HQYPView.cs" />
     <Compile Include="ViewModels\HQSY\HQSY_HCZLView.cs" />
+    <Compile Include="ViewModels\HQSY\HQSY_CZZXView.cs" />
     <Compile Include="ViewModels\HQSY\HQSY_HYJDView.cs" />
     <Compile Include="ViewModels\HQSY\HQSY_HQGSView.cs" />
     <Compile Include="ViewModels\JYPX\QZZP_JZZPView.cs" />
