--- a/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
+++ b/TianWen.XiaoZhen1Qu.Entities/TianWen.XiaoZhen1Qu.Entities.csproj
@@ -584,6 +584,7 @@
     <Compile Include="ViewModels\FC\FC_SPView.cs" />
     <Compile Include="ViewModels\FC\FC_ZZFView.cs" />
     <Compile Include="ViewModels\GY\GRXXView.cs" />
+    <Compile Include="ViewModels\HQSY\HQSY_HSLFView.cs" />
     <Compile Include="ViewModels\HQSY\HQSY_HLGPView.cs" />
     <Compile Include="ViewModels\HQSY\HQSY_HQYPView.cs" />
     <Compile Include="ViewModels\HQSY\HQSY_HCZLView.cs" />
@@ -592,6 +593,7 @@
     <Compile Include="ViewModels\HQSY\HQSY_HQGSView.cs" />
     <Compile Include="ViewModels\JYPX\QZZP_JZZPView.cs" />
     <Compile Include="ViewModels\LR\LR_MTSSView.cs" />
+    <Compile Include="ViewModels\LYJD\LYJD_GNYView.cs" />
     <Compile Include="ViewModels\LYJD\LYJD_LXSView.cs" />
     <Compile Include="ViewModels\NLMFY\NLMFY_YLHHView.cs" />
     <Compile Include="ViewModels\PFCG\PFCG_SPView.cs" />
